--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "freedanz",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://freedanzz.github.io/",
+  "homepage": "https://freedanzz.github.io/build/",
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
