Published gh-pages

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "freedanz",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://freedanzz.github.io/build/",
+  "homepage": "https://freedanzz.github.io/",
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
@@ -31,7 +31,7 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -b master -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
