--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     ]
   },
   "devDependencies": {
-    "sass": "^1.62.0"
+    "sass": "^1.62.0",
+    "workbox-webpack-plugin": "^7.0.0"
   }
 }
