--- a/package.json
+++ b/package.json
@@ -27,7 +27,12 @@
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "use-google-sheets": "^2.0.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "workbox-core": "^7.0.0",
+    "workbox-expiration": "^7.0.0",
+    "workbox-precaching": "^7.0.0",
+    "workbox-routing": "^7.0.0",
+    "workbox-strategies": "^7.0.0"
   },
   "scripts": {
     "predeploy": "npm run build",
