--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "bcryptjs": "^2.4.3",
     "dayjs": "^1.11.7",
     "firebase": "^9.19.1",
     "gh-pages": "^5.0.0",
+    "js-cookie": "^3.0.5",
     "moment": "^2.29.4",
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
