--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-confetti": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-hot-toast": "^2.4.1",
     "react-moment": "^1.1.3",
     "react-qr-code": "^2.0.11",
     "react-qrcode-logo": "^2.8.0",
