--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^5.11.16",
+    "@mui/lab": "^5.0.0-alpha.136",
     "@mui/material": "^5.12.0",
     "@mui/x-date-pickers": "^6.1.0",
     "@mui/x-date-pickers-pro": "^6.1.0",
@@ -15,6 +16,7 @@
     "@testing-library/user-event": "^13.5.0",
     "animejs": "^3.2.1",
     "bcryptjs": "^2.4.3",
+    "date-fns": "^2.0.0",
     "dayjs": "^1.11.7",
     "firebase": "^10.0.0",
     "gh-pages": "^5.0.0",
