--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "freedanz",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "homepage": "https://freedanzz.github.io/",
   "dependencies": {
@@ -24,6 +24,7 @@
     "moment": "^2.29.4",
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
+    "react-burger-menu": "^3.0.9",
     "react-confetti": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
