--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "react-qrcode-logo": "^2.8.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
+    "swiper": "^10.0.4",
     "use-google-sheets": "^2.0.0",
     "web-vitals": "^2.1.4",
     "workbox-core": "^7.0.0",
